k8s/k8s_db.yaml
# Kubernetes deployment for the database portion of the 2-container application.
# When both services are being brought down consecutively, THE DATABASE IN THIS FILE NEEDS TO BE BROUGHT DOWN SECOND.
---
# Namespace for the database server
apiVersion: v1
kind: Namespace
metadata:
  name: db-server
---
# Database deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: db-server
  name: database-deployment
# This is the POD spec.
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mysql-pod
    # This is the CONTAINER spec, comprising the containers in this pod. (There's only 1 here.)
    spec:
      containers:
      - name: mysql-container
        image: mysql:8
        imagePullPolicy: Always
        # The ports to be exposed on the container(s) in this spec.
        ports:
        - containerPort: 3306
          name: mysql-port
        # The environment variables to expose to the container.
        args: ["--default-authentication-plugin=mysql_native_password"]
        volumeMounts:
        - name: database-initialization-script
          mountPath: /docker-entrypoint-initdb.d/config.sql
          subPath: config.sql
      volumes:
      - name: database-initialization-script
        configMap:
            name: database-initialization-script
            items:
              - key: config.sql
                path: config.sql
  # The selector uses matches to group pods with certain properties under this deployment.
  selector:
    matchLabels:
      app.kubernetes.io/name: mysql-pod
---
# Database service
apiVersion: v1
kind: Service
metadata:
  namespace: db-server
  # The name of this service has to match the docker-compose service name for the code to be able to reference it.
  name: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  type: NodePort
  # This specifies pod metadata to be grouped under this service.
  selector:
    app.kubernetes.io/name: mysql-pod
---
